src/styles.css
@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;700;900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Tilt+Warp&display=swap');

:root {
  --bg: #202023;
  --main-bg: #15191d;
  --primary-color: #f1f3f5;
}

body {
  background-color: var(--bg);
  display: flex;
  align-items: center;
  flex-direction: column;
  font-size: 16px;
  font-family: 'M PLUS Rounded 1c', sans-serif;
  color: var(--primary-color);
  scroll-behavior: smooth;
}

nav {
  width: 100%;
  backdrop-filter: blur(16px) saturate(180%);
  -webkit-backdrop-filter: blur(16px) saturate(180%);
  background-color: rgba(32, 32, 35, 0.75);
  position: sticky;
  top: 0;
  z-index: 1;
  display: flex;
  align-items: center;
  padding: 0.3em 10px;
}

nav a {
  width: 44px;
  height: 44px;
  display: grid;
  place-content: center;
  color: #f1f3f5;
}

header {
  width: 100%;
}

header h1 {
  font-family: 'Tilt Warp', sans-serif;
}

header .tight {
  margin-top: 10px;
  display: flex;
  flex-direction: column;
}

.desc .linktree {
  font-weight: 800;
  background: linear-gradient(
    90deg,
    #f7c8e0 0 25%,
    #dfffd8 25% 50%,
    #b4e4ff 50% 75%,
    #95bdff 75% 100%
  );
  -webkit-background-clip: text;
  color: transparent;
  border-image: linear-gradient(
      90deg,
      #f7c8e0 0 25%,
      #dfffd8 25% 50%,
      #b4e4ff 50% 75%,
      #95bdff 75% 100%
    )
    1;
  border-bottom: 2px solid;
}

.desc {
  margin-top: 15px;
  display: flex;
  gap: 15px;
  flex-wrap: wrap;
}

.desc > span {
  display: flex;
  align-items: center;
  gap: 5px;
  color: #bbb;
  font-size: 0.9rem;
}

.top {
  width: 100%;
  height: 200px;
  background: #83a4d4;
  background: -webkit-linear-gradient(to right, #b6fbff, #83a4d4);
  background: linear-gradient(to right, #b6fbff, #83a4d4);
}

.bottom {
  width: 100%;
  padding: 0 1em 1em 1em;
}

.avatar {
  width: 9em;
  height: 9em;
  border-radius: 50%;
  transform: translateY(-50%);
  border: 6px solid var(--bg);
  background: rgb(102, 103, 118);
  background: linear-gradient(
    -40deg,
    rgba(102, 103, 118, 1) 60%,
    rgba(193, 187, 185, 1) 100%
  );
}

.heading {
  height: 5em;
  display: flex;
  justify-content: space-between;
}

main {
  width: 100%;
  background-color: var(--bg);
  display: flex;
  flex-direction: column;
  gap: 1em;
}

.tabs {
  position: sticky;
  top: calc(0.6em + 44px);
  backdrop-filter: blur(16px) saturate(180%);
  -webkit-backdrop-filter: blur(16px) saturate(180%);
  background-color: rgba(32, 32, 35, 0.75);
  margin-bottom: 0.5em;
}

.tabs ul {
  display: flex;
  justify-content: space-around;
  list-style-type: none;
}

.tabs ul li a {
  text-decoration: none;
  color: #bbb;
  width: 100%;
  height: 100%;
  display: grid;
  place-items: center;
}

.tabs ul li a span {
  font-weight: 700;
}

.tabs ul li {
  flex-grow: 1;
}

.tabs ul li > a > span {
  color: #bbb;
  border-bottom: 3px solid transparent;
  padding: 6px 4px;
}

.tabs ul li > a > span.hl {
  transition: all 0.2s ease-in-out;
  color: #fff;
  border-bottom-color: #9dc08b;
}

section {
  padding: 0 1em;
  width: 100%;
  display: none;
  flex-direction: column;
  gap: 1em;
}

section .pinned {
  display: flex;
  align-items: center;
  font-size: smaller;
  color: #bbb;
  gap: 5px;
  font-weight: 600;
  margin-bottom: 0.5em;
}

section article {
  padding: 1em 1em 2em 1em;
  box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px,
    rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
  border-radius: 5px;
}

section article .title {
  display: flex;
  align-items: center;
  gap: 10px;
}

.title span {
  display: grid;
  place-content: center;
}

section article p {
  margin-top: 1em;
}

section article .date {
  font-size: small;
  color: #bbb;
}

section .more {
  margin-top: 1em;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

section .more .details {
  display: flex;
  gap: 5px;
  font-size: small;
  color: #bbb;
  font-weight: 600;
  padding: 2px 0;
}

.show {
  display: flex;
}

section .more .options a {
  text-decoration: none;
}

footer {
  width: 100%;
  display: grid;
  place-content: center;
  font-size: small;
  padding: 1em 0;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.bg {
  position: absolute;
  opacity: 0.05;
  height: 100%;
  right: 0;
  bottom: 0;
  transform: translate(50%, 25%);
}

.btn {
  width: 6em;
  height: 2.2em;
  margin-top: 1em;
  background-color: #c2fbd7;
  border-radius: 100px;
  box-shadow: rgba(44, 187, 99, 0.2) 0 -25px 18px -14px inset,
    rgba(44, 187, 99, 0.15) 0 1px 2px, rgba(44, 187, 99, 0.15) 0 2px 4px,
    rgba(44, 187, 99, 0.15) 0 4px 8px, rgba(44, 187, 99, 0.15) 0 8px 16px,
    rgba(44, 187, 99, 0.15) 0 16px 32px;
  color: green;
  cursor: pointer;
  display: inline-block;
  padding: 7px 20px;
  text-align: center;
  text-decoration: none;
  transition: all 250ms;
  border: 0;
  font-size: 16px;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  font-weight: bold;
}

@media (min-width: 769px) {
  header {
    width: 724px;
  }

  main {
    width: 724px;
  }

  .tabs ul li:hover {
    background-color: #212529;
  }
}

